Source/Alternet.UI.Pal/Api/SizerFlags.Api.h

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2023 AlterNET Software.</auto-generated>

#pragma once

#include "SizerFlags.h"
#include "ApiUtils.h"
#include "Exceptions.h"

using namespace Alternet::UI;

ALTERNET_UI_API SizerFlags* SizerFlags_Create_()
{
    return new SizerFlags();
}

ALTERNET_UI_API void* SizerFlags_CreateSizerFlags_(int proportion)
{
    return SizerFlags::CreateSizerFlags(proportion);
}

ALTERNET_UI_API int SizerFlags_GetDefaultBorder_()
{
    return SizerFlags::GetDefaultBorder();
}

ALTERNET_UI_API float SizerFlags_GetDefaultBorderFractional_()
{
    return SizerFlags::GetDefaultBorderFractional();
}

ALTERNET_UI_API int SizerFlags_GetProportion_(void* handle)
{
    return SizerFlags::GetProportion(handle);
}

ALTERNET_UI_API int SizerFlags_GetFlags_(void* handle)
{
    return SizerFlags::GetFlags(handle);
}

ALTERNET_UI_API int SizerFlags_GetBorderInPixels_(void* handle)
{
    return SizerFlags::GetBorderInPixels(handle);
}

ALTERNET_UI_API void SizerFlags_Proportion_(void* handle, int proportion)
{
    SizerFlags::Proportion(handle, proportion);
}

ALTERNET_UI_API void SizerFlags_Expand_(void* handle)
{
    SizerFlags::Expand(handle);
}

ALTERNET_UI_API void SizerFlags_Align_(void* handle, int alignment)
{
    SizerFlags::Align(handle, alignment);
}

ALTERNET_UI_API void SizerFlags_Center_(void* handle)
{
    SizerFlags::Center(handle);
}

ALTERNET_UI_API void SizerFlags_CenterVertical_(void* handle)
{
    SizerFlags::CenterVertical(handle);
}

ALTERNET_UI_API void SizerFlags_CenterHorizontal_(void* handle)
{
    SizerFlags::CenterHorizontal(handle);
}

ALTERNET_UI_API void SizerFlags_Top_(void* handle)
{
    SizerFlags::Top(handle);
}

ALTERNET_UI_API void SizerFlags_Left_(void* handle)
{
    SizerFlags::Left(handle);
}

ALTERNET_UI_API void SizerFlags_Right_(void* handle)
{
    SizerFlags::Right(handle);
}

ALTERNET_UI_API void SizerFlags_Bottom_(void* handle)
{
    SizerFlags::Bottom(handle);
}

ALTERNET_UI_API void SizerFlags_Border_(void* handle, int direction, int borderInPixels)
{
    SizerFlags::Border(handle, direction, borderInPixels);
}

ALTERNET_UI_API void SizerFlags_Border2_(void* handle, int direction)
{
    SizerFlags::Border2(handle, direction);
}

ALTERNET_UI_API void SizerFlags_DoubleBorder_(void* handle, int direction)
{
    SizerFlags::DoubleBorder(handle, direction);
}

ALTERNET_UI_API void SizerFlags_TripleBorder_(void* handle, int direction)
{
    SizerFlags::TripleBorder(handle, direction);
}

ALTERNET_UI_API void SizerFlags_HorzBorder_(void* handle)
{
    SizerFlags::HorzBorder(handle);
}

ALTERNET_UI_API void SizerFlags_DoubleHorzBorder_(void* handle)
{
    SizerFlags::DoubleHorzBorder(handle);
}

ALTERNET_UI_API void SizerFlags_Shaped_(void* handle)
{
    SizerFlags::Shaped(handle);
}

ALTERNET_UI_API void SizerFlags_FixedMinSize_(void* handle)
{
    SizerFlags::FixedMinSize(handle);
}

ALTERNET_UI_API void SizerFlags_ReserveSpaceEvenIfHidden_(void* handle)
{
    SizerFlags::ReserveSpaceEvenIfHidden(handle);
}